--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div id="main">
-    <div class="nav orange">
+    <div class="nav khaki">
     </div>
 
   <div id="header" class="center-content clearfix">
@@ -39,7 +39,7 @@
            <a id="map"></a>
     </div>
     <div id="letsConnect" class='dark-gray'>
-      <h2 class='orange center-text'>Let's Connect</h2>
+      <h2 class='cream-text center-text'>Let's Connect</h2>
         <ul id="footerContacts" class="flex-box">
       </ul>
     </div>
