--- a/index.html
+++ b/index.html
@@ -2,74 +2,79 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <title>Resume</title>
-  <link href="css/style.css" rel="stylesheet" type="text/css">
-  <script src="js/jQuery.js"></script>
-  <script src="js/helper.js"></script>
-  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
-  <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8">
+    <title>Resume</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script src="js/jQuery.js"></script>
+    <script src="js/helper.js"></script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
+    <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
-  <div id="main">
-    <div class="nav khaki">
+    <div id="main">
+
+        <div class="nav khaki">
+            <ul class="nav_list">
+        </div>
+
+        <div id="header" class="center-content clearfix">
+            <ul id="topContacts" class='flex-box'></ul>
+        </div>
+
+        <div style='clear: both;'></div>
+        <div id="workExperience" class='gray'>
+            <!--<a id="wor"></a>   menu link -->
+            <h2>Work Experience</h2>
+        </div>
+
+        <div id="projects">
+            <!-- <a id="pro"></a>  menu link  -->
+            <h2>Projects</h2>
+        </div>
+
+        <div id="education" class='gray'>
+            <!-- <a id="edu"></a> menu link -->
+            <h2>Education</h2>
+        </div>
+
+        <div id="mapDiv">
+            <h2>Where I've Lived and Worked</h2>
+            <a id="map"></a>
+        </div>
+
+        <div id="letsConnect" class='dark-gray'>
+            <h2 class='cream-text center-text'>Let's Connect</h2>
+            <ul id="footerContacts" class="flex-box">
+            </ul>
+        </div>
     </div>
 
-  <div id="header" class="center-content clearfix">
-      <ul id="topContacts" class='flex-box'></ul>
-  </div>
+    <script src="js/resumeBuilder.js"></script>
+    <script type="text/javascript">
+        if (document.getElementsByClassName('flex-item').length === 0) {
+            document.getElementById('topContacts').style.display = "none";
+        }
+        if (document.getElementsByTagName('h1').length === 0) {
+            document.getElementById('header').style.display = "none";;
+        }
+        if (document.getElementsByClassName('work-entry').length === 0) {
+            document.getElementById('workExperience').style.display = "none";;
+        }
+        if (document.getElementsByClassName('project-entry').length === 0) {
+            document.getElementById('projects').style.display = "none";
+        }
+        if (document.getElementsByClassName('education-entry').length === 0) {
+            document.getElementById('education').style.display = "none";
+        }
+        if (document.getElementsByClassName('flex-item').length === 0) {
+            document.getElementById('letsConnect').style.display = "none";
+        }
+        if (document.getElementById('map') === null) {
+            document.getElementById('mapDiv').style.display = "none";
+        }
+    </script>
 
-    <div style='clear: both;'></div>
-    <div id="workExperience" class='gray'>
-      <!--<a id="wor"></a>   menu link -->
-      <h2>Work Experience</h2>
-    </div>
-    <div id="projects">
-      <!-- <a id="pro"></a>  menu link  -->
-      <h2>Projects</h2>
-    </div>
-    <div id="education" class='gray'>
-      <!-- <a id="edu"></a> menu link -->
-      <h2>Education</h2>
-    </div>
-    <div id="mapDiv">
-
-      <h2>Where I've Lived and Worked</h2>
-           <a id="map"></a>
-    </div>
-    <div id="letsConnect" class='dark-gray'>
-      <h2 class='cream-text center-text'>Let's Connect</h2>
-        <ul id="footerContacts" class="flex-box">
-      </ul>
-    </div>
-  </div>
-
-  <script src="js/resumeBuilder.js"></script>
-  <script type="text/javascript">
-
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('topContacts').style.display= "none";
-    }
-    if(document.getElementsByTagName('h1').length === 0) {
-      document.getElementById('header').style.display= "none";;
-    }
-    if(document.getElementsByClassName('work-entry').length === 0) {
-      document.getElementById('workExperience').style.display= "none";;
-    }
-    if(document.getElementsByClassName('project-entry').length === 0) {
-      document.getElementById('projects').style.display= "none";
-    }
-    if(document.getElementsByClassName('education-entry').length === 0) {
-      document.getElementById('education').style.display= "none";
-    }
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('letsConnect').style.display= "none";
-    }
-    if(document.getElementById('map') === null) {
-      document.getElementById('mapDiv').style.display= "none";
-    }
-
-  </script>
 </body>
+
 </html>
